force-app/main/default/objects/TW1_Vendor_Category__c/TW1_Vendor_Category__c.object-meta.xml
<CustomObject>
    <description>Antigo Vendor category</description>
    <label>Supplier Category</label>
    <nameField>
        <displayFormat>VC{00000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suppliers Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>