force-app/main/default/objects/TW1_Vendor_Category__c/fields/NationalExclusiveCategorySEN__c.field-meta.xml
<CustomField>
    <fullName>NationalExclusiveCategorySEN__c</fullName>
    <formula>TEXT(TW1_Category__r.NationalExclusiveCategorySEN__c)</formula>
    <label>National Exclusive Category - SEN</label>
    <type>Text</type>
</CustomField>