force-app/main/default/objects/TW1_Vendor_Category__c/fields/T_Category__c.field-meta.xml
<CustomField>
    <fullName>T_Category__c</fullName>
    <formula>TW1_Category__r.TW1_Category__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category</label>
    <type>Text</type>
</CustomField>