force-app/main/default/objects/TW1_Vendor_Category__c/fields/T_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>T_Category_Name__c</fullName>
    <formula>TW1_Category__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category Name</label>
    <type>Text</type>
</CustomField>