force-app/main/default/objects/TW1_Vendor_Category__c/fields/T_Category_Type__c.field-meta.xml
<CustomField>
    <fullName>T_Category_Type__c</fullName>
    <label>Category Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>