force-app/main/default/objects/TW1_Vendor_Category__c/fields/T_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>T_Subcategory__c</fullName>
    <formula>TW1_Category__r.TW1_Sub_Category__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subcategory</label>
    <type>Text</type>
</CustomField>