force-app/main/default/objects/TW1_Vendor_Category__c/fields/TW1_Category__c.field-meta.xml
<CustomField>
    <fullName>TW1_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>TW1_Category__c</referenceTo>
    <relationshipName>Vendors_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>