force-app/main/default/objects/TW1_Vendor_Category__c/fields/TW1_CategoryF__c.field-meta.xml
<CustomField>
    <fullName>TW1_CategoryF__c</fullName>
    <formula>IF( 

ISBLANK( TW1_Category__r.TW1_Sub_Category__c ),
 TW1_Category__r.TW1_Category__c,
TW1_Category__r.TW1_Sub_Category__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category D</label>
    <type>Text</type>
</CustomField>