force-app/main/default/objects/TW1_Vendor_Category__c/fields/TW1_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>TW1_Expiration_Date__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>