force-app/main/default/objects/TW1_Vendor_Category__c/fields/TW1_Status__c.field-meta.xml
<CustomField>
    <fullName>TW1_Status__c</fullName>
    <defaultValue>&quot;Not Homologated&quot;</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Homologated</fullName>
            </value>
            <value>
                <fullName>Not Homologated</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>