force-app/main/default/objects/TW1_Vendor_Category__c/fields/TW1_TypeF__c.field-meta.xml
<CustomField>
    <fullName>TW1_TypeF__c</fullName>
    <formula>TW1_Category__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>