force-app/main/default/objects/TW1_Vendor_Category__c/fields/TW1_Vendor__c.field-meta.xml
<CustomField>
    <fullName>TW1_Vendor__c</fullName>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Suppliers Categories</relationshipLabel>
    <relationshipName>Vendors_Categories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>